# CppGLFW

./: CMakeLists.txt
include/cppglfw/: CppGLFW.h  GLFWManager.h  Monitor.h  Window.h  cpp_glfw.h  glfw_manager.h  monitor.h  window.h
src/cppglfw/: GLFWManager.cpp  Monitor.cpp  Window.cpp  glfw_manager.cpp  monitor.cpp  window.cpp
test/: main.cpp
